feat:customize validation errors and register logic
